apps/grocy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
  labels:
    app: grocy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
      - name: grocy
        image: lscr.io/linuxserver/grocy:latest
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 20m
            memory: 64Mi
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: data
          mountPath: "/config"
          readOnly: false
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grocy-data
