apps/grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: grocy.chaosdorf.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grocy
            port:
              number: 80
  tls:
  - secretName: ingress-tls
    hosts:
    - grocy.chaosdorf.space
